--- a/Exercises/000.md
+++ b/Exercises/000.md
@@ -1,9 +1,17 @@
 # 000: An encapsulated Dice
 
 In the first lesson we created a Dice class that stored the `top` of the Dice and had the following methods:
-- `void roll()` - sets `top` to a random integer between 1 and 6
-- `int getTop()` - returns the value on the top of the dice
-- `int getBottom()` - returns the value on the bottom of the dice
+```
+// Rolls the dice, setting the top value to a random integer between 1 and 6
+void roll();
+
+// Returns the value on the top of the dice
+int getTop();
+
+// Returns the value on the bottom of the dice
+int getBottom();
+```
+
 
 Reimplement this Dice class **with encapsulation**, ensuring that every method and attribute has the appropriate access modifier.
 
