Corrected links within questions

--- a/Exercises/001.md
+++ b/Exercises/001.md
@@ -1,7 +1,7 @@
 # 001: Playing Craps with Dice
 
 ## Requirements 
-- [000: An encapsulated Dice](000.md)
+- [000: An encapsulated Dice](./000.md)
 
 ## Description
 
