--- a/Exercises/002.md
+++ b/Exercises/002.md
@@ -1,7 +1,7 @@
 # 002: An improved Dice
 
 ## Requirements
-- [000: An encapsulated Dice](000.md)
+- [000: An encapsulated Dice](./000.md)
 
 ## Description
 Dice can come in all sorts of shapes, sizes, and colours. Our `Dice` class will be good enough for many purposes, but what happens if we're playing a game that needs something more? If you've ever seen a Dungeons and Dragons set of dice, you'll know that you need several different dice with a different number of faces.
