Created solutions for 000-002. Updated exercises to have a bit more guidance.

--- a/Exercises/002.md
+++ b/Exercises/002.md
@@ -4,13 +4,15 @@
 - 000: An encapsulated Dice
 
 ## Description
-Dice can come in all sorts of shapes, sizes, and colours. Our `Dice` class will be good enough for many purposes, but what happens if we're playing a game that needs something more? If you've ever seen a Dungeons and Dragons set of dice, you'll know that you need several different dice with a different number of faces.
+Dice can come in all sorts of shapes, sizes, and colours. Our `Dice` class will be good enough for many purposes, but what happens if we're playing a game that needs something more? If you've ever seen a Dungeons and Dragons set of dice, you'll know that you need several different dice with a different number of sides.
 
-Create an improved `Dice` class (perhaps calling it `ImprovedDice`) with an **additional** constructor, `public ImprovedDice(int faces)`. Additionally, omit `int void getBottom` as it will no longer be needed.
+Create an improved `Dice` class (perhaps calling it `ImprovedDice`) with an **additional** constructor, `public ImprovedDice(int sides)`. Additionally, omit `int void getBottom` as it will no longer be needed.
 
-Note: This is the first time you'll have seen a function/method/constructor taking in a parameter. As we do in Python, we include an *identifier*, and the type that it expects before it. If we want more parameters, we simply add a comma and the next parameter, e.g. `public ImprovedDice(int faces, Colour colour)`.
+Note: This is the first time you'll have seen a function/method/constructor taking in a parameter. As we do in Python, we include an *identifier*, and the type that it expects before it. If we want more parameters, we simply add a comma and the next parameter, e.g. `public ImprovedDice(int sides, Colour colour)`.
 
 Having multiple constructors like this is known as *overloading* in Java. These are now *overloaded constructors*. You can also overload methods like this too - this is actually a form of compile-time polymorphism!
+
+## Extension
 
 Think carefully about any new attributes we may need, and any modifications that need to be made to existing attributes/methods. Remember that the original constructor without any parameters should still exist, which will created a 6-sided `ImprovedDice`. How can we remove duplication here?
 
