--- a/Exercises/001.md
+++ b/Exercises/001.md
@@ -9,6 +9,8 @@ In a game of Craps, the user throws two dice, guessing the sum of them. They win
 
 Using the `public static void main(String[] args)` method within a `Craps` class, create a simple program that plays a single round of Craps by importing and using the `Dice` class created earlier. The program should report what it's doing - when it throws each dice, the value that appears, the total that the `Dice` make, etc.
 
+Use Integer.parseInt(args[0]) to get the first argument of the program and convert it to an integer. 
+
 ## Extension
 
 Improve the program by checking for errors in the user input. For example:
