Added solution for 003 without full comments.

--- a/Exercises/003.md
+++ b/Exercises/003.md
@@ -7,13 +7,13 @@
 
 In this exercise we will simulate a watered down Pokémon battle. A `Pokemon` has a `name` and two attributes:
 - `attack`: an integer between 1 and 12 inclusive
-- `hp`: an integer between 10 and 200 inclusive (divisible by 10)
+- `hp`: an integer between 10 and 200 inclusive
 
 A Pokémon battle consists of an unlimited number of rounds. In each round, both Pokémon calculate *attack damage* by rolling two `Dice`s for themselves, then adding their `attack` value to the sum of the rolls. The Pokémon with the higher attack damage wins the round, and the opposing Pokémon loses 20 HP (or however much it has remaining, if it has less than 20 HP). If both Pokémon have the same attack damage for that round, the result is a draw and no HP is lost. The battle finishes when a Pokémon has 0 HP, i.e. it has fainted.
 
 **Design two classes, `Pokemon` and `PokemonBattle`.**
 
-The `Pokemon` class should contain necessary attributes, an appropriate constructor, and at least these methods:
+The `Pokemon` class should contain necessary attributes, an appropriate constructor, and **at least** these methods:
 ```
 // Reduce the Pokémon's HP
 public void loseHp(int hp);
@@ -27,6 +27,8 @@ public int calculateAttackDamage();
 // Determine if the Pokémon has fainted
 public boolean hasFainted();
 ``` 
+
+Tip: you could use `Math.max()` in `loseHp()` to ensure that the HP hits 0 rather than a negative value.  
 
 The `PokemonBattle` class only needs one *public* method:
 ```
