Added List declaration instructions.

--- a/Exercises/005.md
+++ b/Exercises/005.md
@@ -8,6 +8,23 @@ No previous exercises are needed.
 
 The purpose of this task is to practise using `List<Type>`, either by using `ArrayList` or `LinkedList` (your preference!).
 
+We declare a List like this:
+
+```
+List<String> list = new ArrayList<>();
+```
+
+The type of the variable (on the left) should be the interface (in this case, `List`, with the type of inside the angled brackets).
+For the actual object, we choose a class that implements the `List` interface such as `ArrayList`, as shown above.
+
+**Question: "why isn't the type within the angle brackets for the ArrayList?".** 
+
+This is because it isn't necessary for us to indicate what the type of the elements is. 
+These are already declared on the left, so the compiler can work out what the type of the `ArrayList` is.
+You *could* define it, but you're wasting precious typing time.
+
+**Task:**
+
 Create a package called `music`. Within this, create a `Song` class that stores its title and duration (in seconds).
 
 Then, create an `Artist` class with a `name` and a `catalogue` (a list of `Songs`). It should have the following methods:
