Added import directions

--- a/Exercises/005.md
+++ b/Exercises/005.md
@@ -23,6 +23,13 @@ This is because it isn't necessary for us to indicate what the type of the eleme
 These are already declared on the left, so the compiler can work out what the type of the `ArrayList` is.
 You *could* define it, but you're wasting precious typing time.
 
+You'll also need to import the right packages for Lists and ArrayLists:
+
+```
+import java.util.ArrayList;
+import java.util.List;
+```
+
 **Task:**
 
 Create a package called `music`. Within this, create a `Song` class that stores its title and duration (in seconds).
