--- a/Exercises/008.md
+++ b/Exercises/008.md
@@ -13,3 +13,5 @@ Read [the documentation](https://docs.oracle.com/javase/8/docs/api/java/util/Set
 The method doesn't just add the element to the `Set`, it has a return type which is extremely useful and can help us simplify our code.
 
 Using your solution from 007 (or the example solution), refactor the code once again with this knowledge.
+
+Hint: you might find the do-while loop useful for this solution
