Solutions for 009 and 010 added

--- a/Exercises/009.md
+++ b/Exercises/009.md
@@ -11,10 +11,17 @@ In this question we'll be creating a very simple (and inaccurate) model of a sof
 Create an `Employee` interface with the following methods:
 
 ```
+// Returns the Employee's ID
 String getId();
 
+// Returns the Employee's salary
 int getSalary();
 
+// Returns the bonus that the employee should receive
+// You'll be making a "float" value when you multiply by a decimal
+// Convert this "float" to an "int" using (int) (expression)
+// For example:
+// int example = (int) (0.5 * 0.4)
 int calculateBonus();
 ```
 
@@ -25,4 +32,19 @@ Their bonus is 5% of their salary for each client that they have.
 
 Create the necessary classes/interfaces in a Java package called `employee`, with appropriate constructors for the classes. 
 
-Hint: avoid duplication by using an `abstract` class (perhaps `AbstractEmployee`?)
+## Extension
+
+You can avoid duplication by using an `abstract` class. You'll run into an issue - we have different implementations of `calculateBonus()` depending on the type of Employee.
+
+The solution to this is to make `calculateBonus` an `abstract` method. 
+
+This says that the subclasses *must* implement/override this method (much like an interface).
+
+The method will look like this within the class:
+
+```
+@Override
+public abstract int calculateBonus();
+```
+
+I'd recommend reading more about them!
